--- a/ClientSide/package.json
+++ b/ClientSide/package.json
@@ -2,6 +2,7 @@
   "name": "rental-app-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
