--- a/ServerSide/config.env
+++ b/ServerSide/config.env
@@ -1,2 +1,3 @@
 PORT=3000
 DATABASE=mongodb+srv://musfique:rentalweb@cluster0.rdfrd.mongodb.net/rental-db?retryWrites=true&w=majority
+SECRET_KEY=MYNAMEISMUSFIQUEHASANTHISISMYVARSITYPROJECT
